Fixed whitespace at bottom issue

--- a/webapp/css/cautio-style.css
+++ b/webapp/css/cautio-style.css
@@ -1,15 +1,9 @@
-#cautio-home/* , #design, #features, #connectivity, #software */{
-    background: url(../cautio-images/bg.jpg) no-repeat center center fixed;
+html,body{ 
     background-color: #171717;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    display: table;
-    width: 100%;
 }
 
 .mainlogo{
+    padding-top: 10px;
     width: 30%;
 }
 
@@ -55,12 +49,17 @@ h3.metricstitle2ndrow{
     background: #f1f1f1;
 }
 
-.nav li:hover{
-    background:none;
-    color: #b2b3b4;
-}
 
 .navbar {
     border-bottom: 1px solid #c4c4c4;
     box-shadow: 0px 0px 0px;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
